# AD9833VCO

./: .gitignore  AD9833VCO.uf2  CMakeLists.txt  LICENSE  MCP3201.c  MCP3201.h  README.md  UART.c  UART.h  ad9833.c  ad9833.h  add-new-cspin-2spi-idea.c  freq2array.c  hex2bin.c  hex2bin.h  main.c  minicom-pico  pico_sdk_import.cmake  spiRP2040.c  spiRP2040.h  uf2copy.sh
volt2octave/: bits volts note freq.xlsx  pseudocode-for-array.txt  volt2octave-7bits.xlsx
